# ChangeLog for dev-util/cook
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cook/ChangeLog,v 1.20 2008/01/26 19:15:29 grobian Exp $

  26 Jan 2008; Fabian Groffen <grobian@gentoo.org> cook-2.24.ebuild,
  cook-2.26.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing karltk from metadata.xml as per #200332. Assigning to
  maintainer-needed.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> cook-2.26.ebuild:
  ppc. stable

  24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> cook-2.26.ebuild:
  Stable on sparc

  12 Apr 2007; <welp@gentoo.org> cook-2.26.ebuild:
  Stable on amd64 wrt bug 170641

  21 Mar 2007; Raúl Porcel <armin76@gentoo.org> cook-2.26.ebuild:
  x86 stable

  23 Jan 2007; nixnut <nixnut@gentoo.org> cook-2.24.ebuild:
  Stable on ppc wrt bug 111211

  23 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> cook-2.24.ebuild:
  Stable on sparc wrt #111211

  22 Jan 2007; Raúl Porcel <armin76@gentoo.org> cook-2.24.ebuild:
  x86 stable bug 111211

  05 Nov 2005; Fabian Groffen <grobian@gentoo.org>
  +files/cook-2.24-gcc4.patch, cook-2.24.ebuild:
  Added GCC4 patch and marked ~ppc-macos (bug #111620)

  03 May 2005; David Holm <dholm@gentoo.org> cook-2.24.ebuild:
  Added to ~ppc.

*cook-2.24 (01 Apr 2004)

  01 Apr 2004; Karl Trygve Kalleberg <karltk@gentoo.org>
  cook-2.24.ebuild: New upstream version. No joke.
  
  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*cook-2.20 (23 Jul 2002)

  08 Aug 2002; Seemant Kulleen <seemant@gentoo.org> cook-2.20.ebuild :

  Made it more FHS compliant.

  23 Jul 2002; Seemant Kulleen <seemant@gentoo.org> cook-2.20.ebuild
  files/digest-cook-2.20 :
  
  Version bump, because cook-2.18 is no longer hosted upstream

*cook-2.18 ( 18 Feb 2002 )
